--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.3.72"
+    apply from: './version_config.gradle'
     repositories {
         google()
         jcenter()
@@ -11,6 +11,7 @@ buildscript {
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+        "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
     }
 }
 
