--- a/version_config.gradle
+++ b/version_config.gradle
@@ -42,6 +42,7 @@ ext {
     // DI
     dagger_version = '2.16'
     hilt_version = '2.28-alpha'
+    hilt_lifecycle_viewmodel = '1.0.0-alpha01'
 
     // Animation
     lottie_version = '2.5.6'
