--- a/app/build.gradle
+++ b/app/build.gradle
@@ -113,7 +113,6 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlin_coroutine_version"
 
     // DI
-    implementation "com.google.dagger:dagger-android-support:$dagger_version"
     implementation "com.google.dagger:hilt-android:$hilt_version"
     implementation "androidx.hilt:hilt-lifecycle-viewmodel:$hilt_lifecycle_viewmodel"
 
@@ -145,6 +144,7 @@ dependencies {
     kapt "androidx.lifecycle:lifecycle-compiler:$arch_lifecycle_version"
     kapt "androidx.room:room-compiler:$room_version"
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
+    kapt "androidx.hilt:hilt-compiler:$hilt_lifecycle_viewmodel"
     kaptAndroidTest "com.google.dagger:dagger-compiler:$dagger_version"
     kaptAndroidTest "com.google.dagger:dagger-android-processor:$dagger_version"
 
