Extract output filename generation

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,14 +70,9 @@ android {
 
     applicationVariants.all { variant ->
         variant.outputs.all { output ->
-            def project = "spacex"
-            def SEP = "-"
             def flavor = variant.productFlavors[0].name
             def buildType = variant.buildType.name
-            def version = variant.versionName
-            def code = variant.versionCode
-
-            outputFileName = project + SEP + flavor + SEP + buildType + SEP + "v" + version + SEP + "b" + code + ".apk"
+            outputFileName = generateOutputFileName(flavor, buildType)
         }
     }
 
@@ -185,10 +180,26 @@ dependencies {
     androidTestImplementation "androidx.navigation:navigation-testing:$nav_version"
 }
 
+def static generateOutputFileName(flavor, buildType) {
+    def project = "spacex"
+    def SEP = "-"
+    def version = appVersionName()
+    def code = appVersionCode()
+    project + SEP + flavor + SEP + buildType + SEP + "v" + version + SEP + "b" + code + ".apk"
+}
+
 def static appVersionCode() {
     1
 }
 
 def static appVersionName() {
     '1.0.0'
+}
+
+task apkFileName {
+    group = 'Build'
+    description = 'Produces a apk file name with given flavor and buildType (ex: ./gradlew apkFileName -Pflavor=prod -PbuildType=debug)'
+    doLast {
+        print(generateOutputFileName(flavor, buildType))
+    }
 }
