--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -18,10 +18,10 @@ jobs:
         with:
           java-version: 1.8
       - name: Getting config
+        run: echo 'Starting check'; echo $releaseKeyPass; echo $encodedCert; echo 'This is end of check'
         env:
           releaseKeyPass: ${{ secrets.PROD_KEY_PASS }}
           encodedCert:  ${{ secrets.PROD_CERT_ENCODED }}
-        run: echo 'Starting check'; echo "$releaseKeyPass"; "echo $encodedCert"; echo 'This is end of check'
       - name: Make gradlew executable
         run: chmod +x ./gradlew
       - name: Unit test with Gradle
