--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -7,10 +7,27 @@ on:
     branches: [ build*, build/*, release*, release/* ]
 
 jobs:
-  buildartifact:
+  unittest:
 
     runs-on: ubuntu-latest
 
+    steps:
+      - uses: actions/checkout@v2
+      - name: set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+      - name: Make gradlew executable
+        run: chmod +x ./gradlew
+      - name: Unit test with Gradle
+        run: ./gradlew testMockDebug --stacktrace
+
+
+  buildartifact:
+
+    runs-on: ubuntu-latest
+    needs:
+      - unittest
     steps:
       - uses: actions/checkout@v2
       - name: set up JDK 1.8
@@ -25,10 +42,12 @@ jobs:
           encodedCert: ${{ secrets.PROD_CERT_GPG }}
           decodePass: ${{ secrets.PROD_CERT_GPG_PASS }}
         run: |
-          echo 'Starting fetch cert'
+          echo 'Getting artifact file name'
           ./gradlew apkFileName -Pflavor=prod -PbuildType=debug
           chmod +x ./app/savecert.sh
           ./gradlew saveCert --stacktrace
+
+          echo 'Starting fetch cert'
           echo "${{ secrets.PROD_CERT_GPG }}" > nomadProd.keystore.asc
           gpg -d --passphrase "${{ secrets.PROD_CERT_GPG_PASS }}" --batch nomadProd.keystore.asc > app/nomadProd.keystore
           echo 'Save done'
