--- a/.github/workflows/android-dev-ci.yml
+++ b/.github/workflows/android-dev-ci.yml
@@ -2,9 +2,9 @@ name: Android CI
 
 on:
   push:
-    branches: [ develop, master, release* ]
+    branches: [ develop, master ]
   pull_request:
-    branches: [ develop, master, release* ]
+    branches: [ develop, master ]
 
 jobs:
   unittest:
