--- a/.github/workflows/android-prod-build.yml
+++ b/.github/workflows/android-prod-build.yml
@@ -1,4 +1,4 @@
-name: Android Build
+name: Prod release build
 
 on:
   push:
@@ -8,9 +8,7 @@ on:
 
 jobs:
   unittest:
-
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v2
       - name: set up JDK 1.8
@@ -24,7 +22,6 @@ jobs:
 
 
   buildartifact:
-
     runs-on: ubuntu-latest
     needs:
       - unittest
