--- a/app/build.gradle
+++ b/app/build.gradle
@@ -202,6 +202,7 @@ task apkFileName {
     doLast {
         println(generateOutputFileName(flavor, buildType))
         println(System.getenv('releaseKeyPass'))
+        new File(projectDir, "artifact_name.txt").text = generateOutputFileName(flavor, buildType)
     }
 }
 
